--- a/index.html
+++ b/index.html
@@ -91,12 +91,15 @@
             </div>
 
             <div class="container" id="content-body">
-                <div>1</div>
-                <div>2</div>
-                <div>3</div>
-                <div>4</div>
-                <div>5</div>
-                <div>6</div>
+                <div class="big"><img src="Images/1.jpg" alt="picture1"></div>
+                <div class="big"><img src="Images/2.jpg" alt="picutre2"></div>
+                <div><img src="Images/3.jpg" alt="picutre3"></div>
+                <div><img src="Images/4.gif" alt="picutre4"></div>
+                <div><img src="Images/5.jpg" alt="picutre5"></div>
+                <div><img src="Images/6.jpg" alt="picutre6"></div>
+                <div><img src="Images/7.jpg" alt="picutre7"></div>
+                <div><img src="Images/8.jpg" alt="picutre8"></div>
+                <div><img src="Images/9.jpg" alt="picutre9"></div>
             </div>
 
         </div>
