--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow" rel="stylesheet">
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
+    <script src="animation.js"></script>
 </head>
 
 <body>
@@ -72,16 +73,12 @@
         <!-- Page Content  -->
         <div id="content">
 
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid">
 
-                    <button type="button" id="sidebarCollapse" class="btn btn-info">
-                        <i class="fas fa-bars"></i>
-                        <span>Menu</span>
-                    </button>
+            <button type="button" id="sidebarCollapse" class="btn btn-info">
+                <i class="fas fa-bars"></i>
+                <span>Menu</span>
+            </button>
 
-                </div>
-            </nav>
 
             <div class="jumbotron jumbotron-fluid">
                     <div class="container" id="jumbo">
@@ -90,17 +87,13 @@
                     </div>
             </div>
 
-            <div class="container" id="content-body">
-                <div class="big"><img src="Images/1.jpg" alt="picture1"></div>
-                <div class="big"><img src="Images/2.jpg" alt="picutre2"></div>
-                <div><img src="Images/3.jpg" alt="picutre3"></div>
-                <div><img src="Images/4.gif" alt="picutre4"></div>
-                <div><img src="Images/5.jpg" alt="picutre5"></div>
-                <div><img src="Images/6.jpg" alt="picutre6"></div>
-                <div><img src="Images/7.jpg" alt="picutre7"></div>
-                <div><img src="Images/8.jpg" alt="picutre8"></div>
-                <div><img src="Images/9.jpg" alt="picutre9"></div>
-            </div>
+            <div class="slider" id="main-slider"><!-- outermost container element -->
+                <div class="slider-wrapper"><!-- innermost wrapper element -->
+                    <img src="Images/1.jpg"First" class="slide" /><!-- slides -->
+                    <img src="Images/2.jpg" alt="Second" class="slide" />
+                    <img src="Images/3.jpg" alt="Third" class="slide" />
+                </div>
+            </div>	
 
         </div>
     </div>
